--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header {
 .nav-link {
     color: white;
     text-decoration: none;
-    margin: 0;
+    margin: 0 25px;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.9rem;
